Add create_shaderpack to default build target

--- a/src/apps/shaderpack/CMakeLists.txt
+++ b/src/apps/shaderpack/CMakeLists.txt
@@ -21,4 +21,4 @@ set_target_properties(shaderpack PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BIN
 target_precompile_headers(shaderpack PRIVATE ${CMAKE_SOURCE_DIR}/src/pch.h)
 target_link_libraries(shaderpack PRIVATE resource system ${Boost_PROGRAM_OPTIONS_LIBRARY} ${Boost_FILESYSTEM_LIBRARY})
 
-add_custom_target(create_shaderpack shaderpack ${CMAKE_SOURCE_DIR}/glsl ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/bin)
+add_custom_target(create_shaderpack ALL shaderpack ${CMAKE_SOURCE_DIR}/glsl ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/bin)
