Replace Boost.Regex with standard implementation

--- a/src/libs/tools/CMakeLists.txt
+++ b/src/libs/tools/CMakeLists.txt
@@ -60,4 +60,4 @@ add_library(tools ${TOOLS_HEADERS} ${TOOLS_SOURCES} ${CLANG_FORMAT_PATH})
 set_target_properties(tools PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/lib)
 set_target_properties(tools PROPERTIES DEBUG_POSTFIX "d")
 target_precompile_headers(tools PRIVATE ${CMAKE_SOURCE_DIR}/src/pch.h)
-target_link_libraries(tools PRIVATE game tinyxml2 ${Boost_REGEX_LIBRARY})
+target_link_libraries(tools PRIVATE game tinyxml2)
