--- a/src/libs/game/CMakeLists.txt
+++ b/src/libs/game/CMakeLists.txt
@@ -223,7 +223,7 @@ set(GAME_HEADERS
     ${GAME_INCLUDE_DIR}/portrait.h
     ${GAME_INCLUDE_DIR}/portraits.h
     ${GAME_INCLUDE_DIR}/reputes.h
-    ${GAME_INCLUDE_DIR}/resourcelayout.h
+    ${GAME_INCLUDE_DIR}/resourcedirector.h
     ${GAME_INCLUDE_DIR}/room.h
     ${GAME_INCLUDE_DIR}/savedgame.h
     ${GAME_INCLUDE_DIR}/schema/are.h
@@ -440,7 +440,7 @@ set(GAME_SOURCES
     ${GAME_SOURCE_DIR}/player.cpp
     ${GAME_SOURCE_DIR}/portraits.cpp
     ${GAME_SOURCE_DIR}/reputes.cpp
-    ${GAME_SOURCE_DIR}/resourcelayout.cpp
+    ${GAME_SOURCE_DIR}/resourcedirector.cpp
     ${GAME_SOURCE_DIR}/room.cpp
     ${GAME_SOURCE_DIR}/schema/are.cpp
     ${GAME_SOURCE_DIR}/schema/dlg.cpp
