--- a/src/libs/graphics/CMakeLists.txt
+++ b/src/libs/graphics/CMakeLists.txt
@@ -44,7 +44,7 @@ set(GRAPHICS_HEADERS
     ${GRAPHICS_INCLUDE_DIR}/format/txireader.h
     ${GRAPHICS_INCLUDE_DIR}/framebuffer.h
     ${GRAPHICS_INCLUDE_DIR}/lipanimation.h
-    ${GRAPHICS_INCLUDE_DIR}/lipanimations.h
+    ${GRAPHICS_INCLUDE_DIR}/lips.h
     ${GRAPHICS_INCLUDE_DIR}/lumautil.h
     ${GRAPHICS_INCLUDE_DIR}/mesh.h
     ${GRAPHICS_INCLUDE_DIR}/meshes.h
