Reintroduce Cache utility class

--- a/src/libs/system/CMakeLists.txt
+++ b/src/libs/system/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SYSTEM_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/libs/system)
 set(SYSTEM_HEADERS
     ${SYSTEM_INCLUDE_DIR}/binaryreader.h
     ${SYSTEM_INCLUDE_DIR}/binarywriter.h
+    ${SYSTEM_INCLUDE_DIR}/cache.h
     ${SYSTEM_INCLUDE_DIR}/clock.h
     ${SYSTEM_INCLUDE_DIR}/di/module.h
     ${SYSTEM_INCLUDE_DIR}/di/services.h
