Introduce ObjectSceneBridge for syncing objects and scene graph

--- a/src/libs/game/CMakeLists.txt
+++ b/src/libs/game/CMakeLists.txt
@@ -301,9 +301,11 @@ set(GAME_HEADERS
     ${GAME_INCLUDE_DIR}/object/creature.h
     ${GAME_INCLUDE_DIR}/object/door.h
     ${GAME_INCLUDE_DIR}/object/encounter.h
+    ${GAME_INCLUDE_DIR}/object/event.h
     ${GAME_INCLUDE_DIR}/object/item.h
     ${GAME_INCLUDE_DIR}/object/module.h
     ${GAME_INCLUDE_DIR}/object/placeable.h
+    ${GAME_INCLUDE_DIR}/object/scenebridge.h
     ${GAME_INCLUDE_DIR}/object/sound.h
     ${GAME_INCLUDE_DIR}/object/store.h
     ${GAME_INCLUDE_DIR}/object/trigger.h
@@ -522,6 +524,7 @@ set(GAME_SOURCES
     ${GAME_SOURCE_DIR}/object/item.cpp
     ${GAME_SOURCE_DIR}/object/module.cpp
     ${GAME_SOURCE_DIR}/object/placeable.cpp
+    ${GAME_SOURCE_DIR}/object/scenebridge.cpp
     ${GAME_SOURCE_DIR}/object/sound.cpp
     ${GAME_SOURCE_DIR}/object/trigger.cpp
     ${GAME_SOURCE_DIR}/object/waypoint.cpp
