--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -66,6 +66,7 @@ set(TESTS_SOURCES
     ${TESTS_SOURCE_DIR}/script/format/ncswriter.cpp
     ${TESTS_SOURCE_DIR}/tools/exprtree.cpp
     ${TESTS_SOURCE_DIR}/tools/exprtreeoptimizer.cpp
+    ${TESTS_SOURCE_DIR}/tools/lipcomposer.cpp
     ${TESTS_SOURCE_DIR}/system/binaryreader.cpp
     ${TESTS_SOURCE_DIR}/system/binarywriter.cpp
     ${TESTS_SOURCE_DIR}/system/cache.cpp
