--- a/src/libs/tools/CMakeLists.txt
+++ b/src/libs/tools/CMakeLists.txt
@@ -19,47 +19,47 @@ set(TOOLS_INCLUDE_DIR ${REONE_INCLUDE_DIR}/reone/tools)
 set(TOOLS_SOURCE_DIR ${CMAKE_SOURCE_DIR}/src/libs/tools)
 
 set(TOOLS_HEADERS
-    ${TOOLS_INCLUDE_DIR}/2da.h
-    ${TOOLS_INCLUDE_DIR}/audio.h
-    ${TOOLS_INCLUDE_DIR}/audioanalyzer.h
-    ${TOOLS_INCLUDE_DIR}/erf.h
-    ${TOOLS_INCLUDE_DIR}/gff.h
-    ${TOOLS_INCLUDE_DIR}/keybif.h
-    ${TOOLS_INCLUDE_DIR}/lip.h
-    ${TOOLS_INCLUDE_DIR}/lipcomposer.h
-    ${TOOLS_INCLUDE_DIR}/liputil.h
-    ${TOOLS_INCLUDE_DIR}/ncs.h
-    ${TOOLS_INCLUDE_DIR}/rim.h
+    ${TOOLS_INCLUDE_DIR}/legacy/2da.h
+    ${TOOLS_INCLUDE_DIR}/legacy/audio.h
+    ${TOOLS_INCLUDE_DIR}/legacy/erf.h
+    ${TOOLS_INCLUDE_DIR}/legacy/gff.h
+    ${TOOLS_INCLUDE_DIR}/legacy/keybif.h
+    ${TOOLS_INCLUDE_DIR}/legacy/lip.h
+    ${TOOLS_INCLUDE_DIR}/legacy/ncs.h
+    ${TOOLS_INCLUDE_DIR}/legacy/rim.h
+    ${TOOLS_INCLUDE_DIR}/legacy/ssf.h
+    ${TOOLS_INCLUDE_DIR}/legacy/tlk.h
+    ${TOOLS_INCLUDE_DIR}/legacy/tool.h
+    ${TOOLS_INCLUDE_DIR}/legacy/tpc.h
+    ${TOOLS_INCLUDE_DIR}/lip/audioanalyzer.h
+    ${TOOLS_INCLUDE_DIR}/lip/composer.h
+    ${TOOLS_INCLUDE_DIR}/lip/shapeutil.h
     ${TOOLS_INCLUDE_DIR}/script/exprtree.h
     ${TOOLS_INCLUDE_DIR}/script/exprtreeoptimizer.h
     ${TOOLS_INCLUDE_DIR}/script/format/nsswriter.h
     ${TOOLS_INCLUDE_DIR}/script/format/pcodereader.h
     ${TOOLS_INCLUDE_DIR}/script/format/pcodewriter.h
-    ${TOOLS_INCLUDE_DIR}/ssf.h
-    ${TOOLS_INCLUDE_DIR}/tlk.h
-    ${TOOLS_INCLUDE_DIR}/tool.h
-    ${TOOLS_INCLUDE_DIR}/tpc.h
     ${TOOLS_INCLUDE_DIR}/types.h)
 
 set(TOOLS_SOURCES
+    ${TOOLS_SOURCE_DIR}/legacy/2da.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/audio.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/erf.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/gff.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/keybif.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/lip.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/ncs.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/rim.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/ssf.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/tlk.cpp
+    ${TOOLS_SOURCE_DIR}/legacy/tpc.cpp
+    ${TOOLS_SOURCE_DIR}/lip/audioanalyzer.cpp
+    ${TOOLS_SOURCE_DIR}/lip/composer.cpp
     ${TOOLS_SOURCE_DIR}/script/exprtree.cpp
     ${TOOLS_SOURCE_DIR}/script/exprtreeoptimizer.cpp
     ${TOOLS_SOURCE_DIR}/script/format/nsswriter.cpp
     ${TOOLS_SOURCE_DIR}/script/format/pcodereader.cpp
-    ${TOOLS_SOURCE_DIR}/script/format/pcodewriter.cpp
-    ${TOOLS_SOURCE_DIR}/2da.cpp
-    ${TOOLS_SOURCE_DIR}/audio.cpp
-    ${TOOLS_SOURCE_DIR}/audioanalyzer.cpp
-    ${TOOLS_SOURCE_DIR}/erf.cpp
-    ${TOOLS_SOURCE_DIR}/gff.cpp
-    ${TOOLS_SOURCE_DIR}/keybif.cpp
-    ${TOOLS_SOURCE_DIR}/lip.cpp
-    ${TOOLS_SOURCE_DIR}/lipcomposer.cpp
-    ${TOOLS_SOURCE_DIR}/ncs.cpp
-    ${TOOLS_SOURCE_DIR}/rim.cpp
-    ${TOOLS_SOURCE_DIR}/ssf.cpp
-    ${TOOLS_SOURCE_DIR}/tlk.cpp
-    ${TOOLS_SOURCE_DIR}/tpc.cpp)
+    ${TOOLS_SOURCE_DIR}/script/format/pcodewriter.cpp)
 
 add_library(tools ${TOOLS_HEADERS} ${TOOLS_SOURCES} ${CLANG_FORMAT_PATH})
 set_target_properties(tools PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}$<$<CONFIG:Debug>:/debug>/lib)
