--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -64,10 +64,10 @@ set(TESTS_SOURCES
     ${TESTS_SOURCE_DIR}/script/execution.cpp
     ${TESTS_SOURCE_DIR}/script/format/ncsreader.cpp
     ${TESTS_SOURCE_DIR}/script/format/ncswriter.cpp
-    ${TESTS_SOURCE_DIR}/tools/audioanalyzer.cpp
-    ${TESTS_SOURCE_DIR}/tools/exprtree.cpp
-    ${TESTS_SOURCE_DIR}/tools/exprtreeoptimizer.cpp
-    ${TESTS_SOURCE_DIR}/tools/lipcomposer.cpp
+    ${TESTS_SOURCE_DIR}/tools/lip/audioanalyzer.cpp
+    ${TESTS_SOURCE_DIR}/tools/lip/composer.cpp
+    ${TESTS_SOURCE_DIR}/tools/script/exprtree.cpp
+    ${TESTS_SOURCE_DIR}/tools/script/exprtreeoptimizer.cpp
     ${TESTS_SOURCE_DIR}/system/binaryreader.cpp
     ${TESTS_SOURCE_DIR}/system/binarywriter.cpp
     ${TESTS_SOURCE_DIR}/system/cache.cpp
