resource: Rename providers to containers

--- a/src/libs/resource/CMakeLists.txt
+++ b/src/libs/resource/CMakeLists.txt
@@ -46,13 +46,13 @@ set(RESOURCE_HEADERS
     ${RESOURCE_INCLUDE_DIR}/gffs.h
     ${RESOURCE_INCLUDE_DIR}/id.h
     ${RESOURCE_INCLUDE_DIR}/layout.h
-    ${RESOURCE_INCLUDE_DIR}/provider.h
-    ${RESOURCE_INCLUDE_DIR}/provider/erf.h
-    ${RESOURCE_INCLUDE_DIR}/provider/exe.h
-    ${RESOURCE_INCLUDE_DIR}/provider/folder.h
-    ${RESOURCE_INCLUDE_DIR}/provider/keybif.h
-    ${RESOURCE_INCLUDE_DIR}/provider/memory.h
-    ${RESOURCE_INCLUDE_DIR}/provider/rim.h
+    ${RESOURCE_INCLUDE_DIR}/container.h
+    ${RESOURCE_INCLUDE_DIR}/container/erf.h
+    ${RESOURCE_INCLUDE_DIR}/container/exe.h
+    ${RESOURCE_INCLUDE_DIR}/container/folder.h
+    ${RESOURCE_INCLUDE_DIR}/container/keybif.h
+    ${RESOURCE_INCLUDE_DIR}/container/memory.h
+    ${RESOURCE_INCLUDE_DIR}/container/rim.h
     ${RESOURCE_INCLUDE_DIR}/resource.h
     ${RESOURCE_INCLUDE_DIR}/resources.h
     ${RESOURCE_INCLUDE_DIR}/resref.h
@@ -86,11 +86,11 @@ set(RESOURCE_SOURCES
     ${RESOURCE_SOURCE_DIR}/format/visreader.cpp
     ${RESOURCE_SOURCE_DIR}/gff.cpp
     ${RESOURCE_SOURCE_DIR}/gffs.cpp
-    ${RESOURCE_SOURCE_DIR}/provider/erf.cpp
-    ${RESOURCE_SOURCE_DIR}/provider/exe.cpp
-    ${RESOURCE_SOURCE_DIR}/provider/folder.cpp
-    ${RESOURCE_SOURCE_DIR}/provider/keybif.cpp
-    ${RESOURCE_SOURCE_DIR}/provider/rim.cpp
+    ${RESOURCE_SOURCE_DIR}/container/erf.cpp
+    ${RESOURCE_SOURCE_DIR}/container/exe.cpp
+    ${RESOURCE_SOURCE_DIR}/container/folder.cpp
+    ${RESOURCE_SOURCE_DIR}/container/keybif.cpp
+    ${RESOURCE_SOURCE_DIR}/container/rim.cpp
     ${RESOURCE_SOURCE_DIR}/resources.cpp
     ${RESOURCE_SOURCE_DIR}/strings.cpp
     ${RESOURCE_SOURCE_DIR}/talktable.cpp
